@@ -3,6 +3,7 @@ Changelog for mSearch2.
 0.8.4 pl
 ==============
 - Added filter by year of document. For example: "publishedon:year".
+- Improved search algorithm, when there is only one word in query.
 
 0.8.3 pl2
 ==============
